--- a/contacts-app-ui/src/main/resources/templates/index.html
+++ b/contacts-app-ui/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div class="col-sm-2">
-            <form action="#" th:action="@{/contact}" th:object="${contactForm}" method="post">
+            <form action="#" th:action="@{/contacts}" th:object="${contactForm}" method="post">
                 <div class="form-group">
                     <label>Name</label>
                     <input class="form-control" type="text" th:field="*{name}" />
